# r2d2

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  sample_mqtt_pub.py  sample_mqtt_sub.py
architecture/: .$software_architecture.drawio.bkp  software_architecture.drawio  software_architecture.drawio.xml
legacy/: Dockerfile  Makefile  install.sh
legacy/.devcontainer/: Dockerfile  devcontainer.json
print/real/ref/: 28byj-48-MotorwelleShaft_ungefahr.stl
print/real/v1/: body.stl  body_susan_mount.stl  center_leg (1).stl  center_leg.stl  head.stl  head_ceiling_plate.stl  lazy_susan_body.stl  lazy_susan_head.stl  left_foot.stl  left_leg.stl  motor_shaft.stl  right_foot.stl  right_leg.stl
print/test/: cameraLidarHolder.stl  cubeHolder.stl  roundBody.stl  shaftExpansion.stl
print/test/motorMount/: LICENSE.txt  README.txt
schematic/: schematic.fzz  testBoardschematic.fzz
schematic/parts/: Treedix-Screw-Terminal-Block-Breakout-Module.fzpz  dc_motor_devre.fzz  tfluna-lidar.fzpz
src/arduino/: r2d2Sketch.ino
src/arduino/debug/: setupI2CScanner.ino
src/arduino/r2d2Sketch/: r2d2Sketch.ino
src/pi/: install.sh  main.py  motor_control.py  requirements.txt  sample_mqtt_pub.py  sample_mqtt_sub.py
src/pi/nodes/: arduino_reader.py
src/pi/serial_readers/: arduino_mock_serial_reader.py  arduino_serial_reader.py  base_serial_reader.py
src/pi/states/: back_led.py  front_led.py  hw_123.py  motor.py  stepper.py  tf_luna.py
src/pi/utils/: mqtt.py  serial_initializer_route.py
src/r2d2/: main.py
src/test/: test.ino
(+13 files in other folders)
